--- a/assets/po/fr_FR.po
+++ b/assets/po/fr_FR.po
@@ -446,7 +446,7 @@ msgstr "Réapparition"
 
 #: menu/inputpage.py:252
 msgid "Menu"
-msgstr ""
+msgstr "Menu"
 
 #: menu/numplayerspage.py:15
 msgid "How many players?"
@@ -582,16 +582,16 @@ msgstr "Sélectionner le circuit"
 
 #: menu/inputselpage.py:22
 msgid "Keyboard"
-msgstr ""
+msgstr "Clavier"
 
 #: menu/inputselpage.py:23
 msgid "Joystick"
-msgstr ""
+msgstr "Manette"
 
 #: menu/multiplayer/messagefrm.py:57 menu/multiplayer/messagefrm.py:201
 #: menu/multiplayer/messagefrm.py:250 menu/multiplayer/messagefrm.py:510
 msgid "write here your message"
-msgstr "écrire ici votre message"
+msgstr "écrivez ici votre message"
 
 #: menu/multiplayer/messagefrm.py:128 menu/multiplayer/messagefrm.py:377
 #: menu/multiplayer/messagefrm.py:404
